css/main.css
/* ... */
/* pop up arrow */
#notificationContainer:before {
    content: '';
    display: block;
    position: absolute;
    width: 0;
    height: 0;
    color: transparent;
    border-width: 10px 10px 10px 10px;
    border-style: solid;
    border-color: transparent transparent whitesmoke transparent;
    margin-top: -20px;
    margin-left: 185px;
}
#notificationTitle
{
    font-weight: bold;
    padding: 8px;
    font-size: 13px;
    background-color: whitesmoke;
    position: fixed;
    z-index: 1000;
    width: 398px;
    border-bottom: 1px solid #dddddd;
    margin-bottom: 10px;
}
#notificationsBody
{
    padding: 33px 0px 0px 0px !important;
    min-height:300px;
}

.notificationPic {
    margin-top: 5px;
    margin-bottom: 5px;
}

.notificationRead {
    background-color: white;
    border-bottom: 1px solid #dddfe2;
}

.notificationUnread {
    background-color: whitesmoke;
    border-bottom: 1px solid #dddfe2;
}

.notificationRead:hover {
    background-color: whitesmoke;
    /*border-bottom: 1px solid #dddfe2;*/
}

.notificationUnread:hover {
    background-color: darkgray;
    /*border-bottom: 1px solid #dddfe2;*/
}

#notificationFooter
{
    background-color: #e9eaed;
    text-align: center;
    font-weight: bold;
    padding: 8px;
    font-size: 12px;
    border-top: 1px solid #dddddd;
}

#notification_count
{
    padding: 1px 3px
    display: block;
    z-index:1;
    position: absolute;
    color: black;
    border-radius: 2px;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    font-weight: normal;
    font-size: 12px;
    right: 13px;
    top: 10px;
}

/* notifications end */

.btn-submit, .btn-submit:active, .btn-submit:focus {
    background: #f7ef6a;
    color: black;
    border-color: black;
}

.btn-submit:hover {
    color: : black;
    background: :#f7ef6a;   
}

.banner {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

.btn-success {
    background:#3cc47c;
}

.btn-success:hover  {
    background: #62d095;
}

/* USER PROFILE PAGE */
.card {
    margin-top: 20px;
    padding: 30px;
    background-color: rgba(214, 224, 226, 0.2);
    -webkit-border-top-left-radius:5px;
    -moz-border-top-left-radius:5px;
    border-top-left-radius:5px;
    -webkit-border-top-right-radius:5px;
    -moz-border-top-right-radius:5px;
    border-top-right-radius:5px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
.card.hovercard {
    position: relative;
    padding-top: 0;
    overflow: hidden;
    text-align: center;
    background-color: #fff;
    background-color: rgba(255, 255, 255, 1);
}
.card.hovercard .card-background {
    height: 130px;
}
.card-background img {
    -webkit-filter: blur(25px);
    -moz-filter: blur(25px);
    -o-filter: blur(25px);
    -ms-filter: blur(25px);
    filter: blur(25px);
    margin-left: -100px;
    margin-top: -200px;
    min-width: 130%;
}
.card.hovercard .useravatar {
    position: absolute;
    top: 15px;
    left: 0;
    right: 0;
}
.card.hovercard .useravatar img {
    width: 100px;
    height: 100px;
    max-width: 100px;
    max-height: 100px;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
    border: 5px solid rgba(255, 255, 255, 0.5);
}
.card.hovercard .card-info {
    position: absolute;
    bottom: 14px;
    left: 0;
    right: 0;
}
.card.hovercard .card-info .card-title {
    padding:0 5px;
    font-size: 40px;
    line-height: 1.5;
    color: #262626;
    background-color: rgba(255, 255, 255, 0.8);
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
}
.card.hovercard .card-info {
    overflow: hidden;
    font-size: 12px;
    line-height: 20px;
    color: #737373;
    text-overflow: ellipsis;
}
.card.hovercard .bottom {
    padding: 0 20px;
    margin-bottom: 17px;
}
.btn-pref .btn {
    -webkit-border-radius:0 !important;
    margin-bottom: 30px;
}

/* Reviews */

.animated {
    -webkit-transition: height 0.2s;
    -moz-transition: height 0.2s;
    transition: height 0.2s;
}

.stars
{
    margin: 20px 0;
    font-size: 24px;
    color: #d17581;
}

.review-block-description {
    word-wrap: break-word;
}


.navbar-collapse.collapse {
  display: block!important;
}

.navbar-nav>li, .navbar-nav {
  float: left;
}

.navbar-nav.navbar-right:last-child {
  margin-right: -15px !important;
}


/* for the reviews stars */


.rating {
    float:left;

}

/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t 
   follow these rules. Every browser that supports :checked also supports :not(), so
   it doesn’t make the test unnecessarily selective */
.rating:not(:checked) > input {
    position:absolute;
    top:-9999px;
    clip:rect(0,0,0,0);
}

.rating:not(:checked) > label {
    float:right;
    width:1em;
    padding:0 .1em;
    overflow:hidden;
    white-space:nowrap;
    cursor:pointer;
    font-size:200%;
    line-height:1.2;
    color:#ddd;
    
}

.rating:not(:checked) > label:before {
    content: '★ ';
}

.rating > input:checked ~ label {
    color: #f70;
    
}

.rating:not(:checked) > label:hover,
.rating:not(:checked) > label:hover ~ label {
    color: gold;
 
}

.rating > input:checked + label:hover,
.rating > input:checked + label:hover ~ label,
.rating > input:checked ~ label:hover,
.rating > input:checked ~ label:hover ~ label,
.rating > label:hover ~ input:checked ~ label {
    color: #ea0;

}

.rating > label:active {
    position:relative;
    top:2px;
    left:2px;
}


/* Start item page CSS */

/*-Header-*/
.header {
    background-color: #99DEAB;
    border-bottom: 5px solid #85AD90;
    padding: 30px 0px;
}

/*-Section Blocks-*/
.section-block {
    background-color: #F7F7F7;
    border-radius:4px;
    padding: 30px;
    margin-bottom:30px;
}
.section-block.summary {
    background-color: #99DEAB;
}
.section-block.summary h1 {
    color: #fff;
    display:block;
    text-align:center;
}
/* ... */

